tests/netgen/spider/errors/circle_number_0/errors.netgen
Warning: Spider networks with many arms should use option spider.omit-center
Error: Spider networks need at least one circle.
Quitting (on error).
